Update: Add new features and fix bugs
- Fix: Display issue in contact form
- Add: New validation in policy
- Update: Improve performance

--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
   <div class="container">
     <header>
       <div class="header-content">
-        <h1>Twitterランキング</h1>
+        <h1>Twitter保存ちゃん。</h1>
         <p class="subtitle">URL 管理とリアルタイムランキング表示</p>
       </div>
       <div class="language-selector">
