Update: Add new features and fix bugs

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Twitter保存ちゃん。</title>
   <meta name="description" content="Twitter保存ちゃん。は、Gofile.ioのURL管理とリアルタイムランキング表示を提供するウェブアプリです。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9788086433456762"
+  <meta name="google-adsense-account" content="ca-pub-9788086433456762">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9788086433456762"
      crossorigin="anonymous"></script>
   
   <style>
