Update: Add new features and fix bugs

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>お問い合わせ - Twitterトレンド保存ちゃん。</title>
+  <title>お問い合わせ - Twitter保存ちゃん。</title>
   <meta name="description" content="不適切なコンテンツの報告やお問い合わせはこちらから。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-adsense-account" content="ca-pub-9788086433456762">
