Fix: JSON parsing error in contact form

--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
     // 翻訳データ
     const translations = {
       ja: {
-        title: 'Gofile ダウンロード数ランキング',
+        title: 'Twitter保存ちゃん。',
         subtitle: 'URL 管理とリアルタイムランキング表示',
         ranking: 'ランキング',
         upload: 'URL 投稿',
