Fix: JSON parsing error in contact form

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Twitter保存ちゃん。</title>
-  <meta name="description" content="Twitter保存ちゃん。は、Gofile.ioのURL管理とリアルタイムランキング表示を提供するウェブアプリです。">
+  <meta name="description" content="Twitter保存ちゃん。は、リアルタイムランキング表示を提供するウェブアプリです。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-adsense-account" content="ca-pub-9788086433456762">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9788086433456762"
@@ -741,7 +741,7 @@
     <header>
       <div class="header-content">
         <h1>Twitter保存ちゃん。</h1>
-        <p class="subtitle">URL 管理とリアルタイムランキング表示</p>
+        <p class="subtitle">リアルタイムランキング表示</p>
       </div>
       <div class="language-selector">
         <button class="lang-btn active" data-lang="ja">日本語</button>
@@ -887,7 +887,7 @@
     const translations = {
       ja: {
         title: 'Twitter保存ちゃん。',
-        subtitle: 'URL 管理とリアルタイムランキング表示',
+        subtitle: 'リアルタイムランキング表示',
         ranking: 'ランキング',
         upload: 'URL 投稿',
         sites: 'サイト一覧',
