--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,7 @@
   <title>お問い合わせ - Twitter保存ちゃん。</title>
   <meta name="description" content="不適切なコンテンツの報告やお問い合わせはこちらから。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-adsense-account" content="ca-pub-9788086433456762">
-  <style>
+<meta name="google-adsense-account" content="ca-pub-9788086433456762">  <style>
     * {
       margin: 0;
       padding: 0;
