--- a/policy.html
+++ b/policy.html
@@ -5,8 +5,7 @@
   <title>利用規約とポリシー - Twitterトレンド保存ちゃん。</title>
   <meta name="description" content="Twitterトレンド保存ちゃん。の利用規約、プライバシーポリシー、コンテンツポリシーを掲載しています。">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-adsense-account" content="ca-pub-9788086433456762">
-  <style>
+<meta name="google-adsense-account" content="ca-pub-9788086433456762">  <style>
     * {
       margin: 0;
       padding: 0;
