add juicyads verification meta

--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <meta name="juicyads-site-verification" content="6dfd55fa788fbaab0feed037228385d9">
+
   <meta charset="utf-8">
   <title>Twitter保存ちゃん。</title>
-  <meta name="description" content="Twitter保存ちゃん。は、リアルタイムランキング表示を提供するウェブアプリです。">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <!-- 基本SEO -->
+  <meta name="description" content="Twitter保存ちゃん。は、リアルタイムで話題の投稿をランキング表示し、保存・確認できるウェブアプリです。">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Open Graph（URL貼り付け時の表示） -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Twitter保存ちゃん。｜リアルタイムトレンド保存">
+  <meta property="og:description" content="今話題のツイートをリアルタイムランキングで表示・保存。見逃したトレンドをすぐ確認できます。">
+  <meta property="og:url" content="https://twitterchan.netlify.app/">
+  <meta property="og:image" content="https://twitterchan.netlify.app/images/gofile.png">
+  <meta property="og:site_name" content="Twitter保存ちゃん。">
+
+  <!-- X (Twitter) 専用 -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Twitter保存ちゃん。">
+  <meta name="twitter:description" content="リアルタイムで話題の投稿をランキング表示・保存できるWebアプリ。">
+  <meta name="twitter:image" content="https://twitterchan.netlify.app/images/gofile.png">
+
+  <!-- 任意 -->
+  <meta name="theme-color" content="#0f172a">
   <style>
     * {
       margin: 0;
