update verification meta and policy

--- a/index.html
+++ b/index.html
@@ -754,6 +754,11 @@
   </style>
 </head>
 <body>
+  <!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109121" data-width="468" data-height="60"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109121});</script>
+<!--JuicyAds END-->
   <div class="container">
     <header>
       <div class="header-content">
@@ -839,7 +844,11 @@
           </div>
         </div>
       </div>
-      
+      <!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109121" data-width="468" data-height="60"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109121});</script>
+<!--JuicyAds END-->
       <div class="card">
         <h2>スクレイピング</h2>
         <form id="scrapeForm">
