--- a/policy.html
+++ b/policy.html
@@ -210,6 +210,11 @@
   </style>
 </head>
 <body>
+  <!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109121" data-width="468" data-height="60"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109121});</script>
+<!--JuicyAds END-->
   <div class="container">
     <header>
       <h1>ポリシー</h1>
@@ -425,7 +430,11 @@
   <footer>
     <p>&copy; 2025 Twitterトレンド保存ちゃん。 All rights reserved.</p>
   </footer>
-  
+  <!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109121" data-width="468" data-height="60"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109121});</script>
+<!--JuicyAds END-->
   <script>
     // タブ切り替え機能
     document.querySelectorAll('.nav-link').forEach(link => {
