update verification meta and policy

--- a/index.html
+++ b/index.html
@@ -801,7 +801,11 @@
         <button class="sort-btn" data-sort="newest">新規順</button>
         <button class="sort-btn" data-sort="popular">リアルタイム人気</button>
       </div>
-      
+      <!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109125" data-width="728" data-height="90"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109125});</script>
+<!--JuicyAds END-->
       <div class="status-bar">
         <div>合計 <span id="total-count">0</span> 個の URL</div>
         <div id="last-update">最終更新: 待機中</div>
@@ -907,7 +911,11 @@
       </div>
     </div>
   </div>
-  
+  <!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109125" data-width="728" data-height="90"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109125});</script>
+<!--JuicyAds END-->
   <script>
     // 翻訳データ
     const translations = {
