--- a/policy.html
+++ b/policy.html
@@ -267,7 +267,11 @@
         本サービスは「現状のまま」提供されます。当サービスの利用によって生じた損害について、一切の責任を負いません。
       </p>
     </div>
-    
+    <!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1109125" data-width="728" data-height="90"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109125});</script>
+<!--JuicyAds END-->
     <!-- プライバシーポリシー -->
     <div id="privacy" class="content">
       <h2>プライバシーポリシー</h2>
