update verification meta and policy

--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
       }
     };
 
-    let currentLanguage = 'en';
+    let currentLanguage = 'ja';
 
     function t(key) {
       return translations[currentLanguage]?.[key] || translations.ja[key] || key;
