update contact page

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Report Issue - File Saver</title>
+  <title>Report Issue - TwiiterChan</title>
   <meta name="description" content="Report inappropriate content, copyright issues, or contact File Saver team.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <style>
