sync netlify publish + add verification/ogp

--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="juicyads-site-verification" content="6dfd55fa788fbaab0feed037228385d9">
-
+<meta name="6a97888e-site-verification" content="5d0f853bb899a096cec259ca0aa1845c">
   <meta charset="utf-8">
-  <title>twitterchan - Download Ranking System</title>
+  <title>TwiiterChan - Download Ranking System</title>
   
   <!-- Basic SEO -->
-  <meta name="description" content="File Saver is a web application that displays trending URLs in real-time ranking and saves them for easy access.">
+  <meta name="description" content="TwiiterChan is a web application that displays trending URLs in real-time ranking and saves them for easy access.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Open Graph (for URL sharing) -->
   <meta property="og:type" content="website">
-  <meta property="og:title" content="File Saver | Real-time Download Ranking">
+  <meta property="og:title" content="TwiiterChan | Real-time Download Ranking">
   <meta property="og:description" content="Display and save trending files in real-time ranking. Never miss trending content again.">
   <meta property="og:url" content="https://twitterchan.netlify.app/">
   <meta property="og:image" content="https://twitterchan.netlify.app/images/gofile.png">
-  <meta property="og:site_name" content="File Saver">
+  <meta property="og:site_name" content="TwiiterChan">
 
   <!-- X (Twitter) Specific -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="File Saver">
+  <meta name="twitter:title" content="TwiiterChan">
   <meta name="twitter:description" content="Real-time ranking display and file management web application.">
   <meta name="twitter:image" content="https://twitterchan.netlify.app/images/gofile.png">
 
@@ -762,7 +761,7 @@
   <div class="container">
     <header>
       <div class="header-content">
-        <h1>File Saver</h1>
+        <h1>TwiiterChan</h1>
         <p class="subtitle">Real-time Download Ranking</p>
       </div>
       <div class="language-selector">
@@ -801,11 +800,7 @@
         <button class="sort-btn" data-sort="newest">Newest First</button>
         <button class="sort-btn" data-sort="popular">Trending Now</button>
       </div>
-      <!-- JuicyAds v3.0 -->
-<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-<ins id="1109125" data-width="728" data-height="90"></ins>
-<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109125});</script>
-<!--JuicyAds END-->
+
       <div class="status-bar">
         <div>Total <span id="total-count">0</span> URLs</div>
         <div id="last-update">Last Update: Waiting...</div>
@@ -848,11 +843,7 @@
           </div>
         </div>
       </div>
-      <!-- JuicyAds v3.0 -->
-<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-<ins id="1109121" data-width="468" data-height="60"></ins>
-<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109121});</script>
-<!--JuicyAds END-->
+
       <div class="card">
         <h2>Web Scraping</h2>
         <form id="scrapeForm">
@@ -911,16 +902,13 @@
       </div>
     </div>
   </div>
-  <!-- JuicyAds v3.0 -->
-<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-<ins id="1109125" data-width="728" data-height="90"></ins>
-<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109125});</script>
-<!--JuicyAds END-->
+
+
   <script>
     // Translations Data - English and Japanese Support
     const translations = {
       en: {
-        title: 'File Saver',
+        title: 'TwiiterChan',
         subtitle: 'Real-time Download Ranking',
         ranking: 'Ranking',
         upload: 'Add URL',
@@ -971,7 +959,7 @@
         twidougaDesc: 'Trending video files'
       },
       ja: {
-        title: 'Twitter保存ちゃん。',
+        title: 'Twitterちゃん。',
         subtitle: 'リアルタイムランキング表示',
         ranking: 'ランキング',
         upload: 'URL 投稿',
