update contact and policy pages

--- a/policy.html
+++ b/policy.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Policy - File Saver</title>
-  <meta name="description" content="File Saver Terms of Service, Privacy Policy, Content Policy, and Disclaimer are listed here.">
+  <title>Policy - TwiiterChan</title>
+  <meta name="description" content="TwiiterChan Terms of Service, Privacy Policy, Content Policy, and Disclaimer are listed here.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <style>
 
@@ -211,11 +211,7 @@
   </style>
 </head>
 <body>
-  <!-- JuicyAds v3.0 -->
-<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-<ins id="1109121" data-width="468" data-height="60"></ins>
-<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109121});</script>
-<!--JuicyAds END-->
+
   <div class="container">
     <header>
       <h1>Policy</h1>
@@ -268,11 +264,7 @@
         This service is provided "as-is." File Saver assumes no responsibility for any damages arising from the use of this service.
       </p>
     </div>
-    <!-- JuicyAds v3.0 -->
-<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
-<ins id="1109125" data-width="728" data-height="90"></ins>
-<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1109125});</script>
-<!--JuicyAds END-->
+
     <!-- Privacy Policy -->
     <div id="privacy" class="content">
       <h2>Privacy Policy</h2>
