update contact and policy pages

--- a/index.html
+++ b/index.html
@@ -868,7 +868,9 @@
       <a href="policy.html" style="padding: 12px 28px; background: white; border: 1.5px solid var(--border-light); border-radius: 8px; text-decoration: none; color: var(--text-light); font-weight: 500; transition: var(--transition);" onmouseover="this.style.borderColor='var(--secondary-color)'; this.style.transform='translateY(-2px)';" onmouseout="this.style.borderColor='var(--border-light)'; this.style.transform='translateY(0)';">Policy</a>
       <a href="contact.html" style="padding: 12px 28px; background: white; border: 1.5px solid var(--border-light); border-radius: 8px; text-decoration: none; color: var(--text-light); font-weight: 500; transition: var(--transition);" onmouseover="this.style.borderColor='var(--secondary-color)'; this.style.transform='translateY(-2px)';" onmouseout="this.style.borderColor='var(--border-light)'; this.style.transform='translateY(0)';">Contact</a>
     </div>
-    
+    <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e38" data-zoneid="5828700"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
     <!-- Ranking Mode -->
     <div id="ranking-mode" class="mode-content">
       <div class="refresh-controls">
@@ -1028,13 +1030,9 @@
     </div>
   </div>
 
-  <!-- 動画広告プレイヤーモーダル -->
-  <div id="videoAdModal" class="video-ad-modal">
-    <div class="video-ad-container">
-      <button class="ad-skip-button" id="adSkipButton">Skip Ad</button>
-      <iframe id="ad-iframe" src="" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
-    </div>
-  </div>
+<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
+ <ins class="eas6a97888e37" data-zoneid="5828702"></ins> 
+ <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
 
   <script>
     // Translations Data - English and Japanese Support
