update contact and policy pages

--- a/contact.html
+++ b/contact.html
@@ -382,15 +382,15 @@
   </style>
 </head>
 <body>
-  <!-- トップ広告エリア（中央配置） -->
-  <div class="ad-container">
-    <div class="ad-wrapper">
-      <script async type="application/javascript" src="https://a.pemsrv.com/ad-provider.js"></script> 
-      <ins class="eas6a97888e35" data-zoneid="5828666"></ins> 
-      <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-    </div>
-  </div>
-
+<!-- admax -->
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "d56a5489c91c2dc5753771bc2a516f9f",type: "action"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+<!-- admax -->
+<!-- admax -->
+<div class="admax-ads" data-admax-id="a46c3c0b2d7478ec1b01899e6f6a31d6" style="display:inline-block;width:728px;height:90px;"></div>
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "a46c3c0b2d7478ec1b01899e6f6a31d6",type: "banner"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+<!-- admax -->
   <div class="container">
     <header>
       <h1>Report Issue</h1>
@@ -431,7 +431,11 @@
           <label for="description" class="required">Detailed Description</label>
           <textarea id="description" placeholder="Please explain why this content should be reported..." required></textarea>
         </div>
-        
+        <!-- admax -->
+<div class="admax-ads" data-admax-id="fdf17afcca824b4238dc71266929761e" style="display:inline-block;width:160px;height:600px;"></div>
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "fdf17afcca824b4238dc71266929761e",type: "banner"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+<!-- admax -->
         <div class="form-group">
           <label for="email">Email Address (Optional)</label>
           <input type="email" id="email" placeholder="your@email.com" />
@@ -469,15 +473,11 @@
       </form>
     </div>
 
-    <!-- フォーム下部広告 -->
-    <div class="ad-container">
-      <div class="ad-wrapper">
-        <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-        <ins class="eas6a97888e2" data-zoneid="5828662"></ins> 
-        <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-      </div>
-    </div>
- 
+<!-- admax -->
+<div class="admax-ads" data-admax-id="a46c3c0b2d7478ec1b01899e6f6a31d6" style="display:inline-block;width:728px;height:90px;"></div>
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "a46c3c0b2d7478ec1b01899e6f6a31d6",type: "banner"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+<!-- admax -->
     <div class="card">
       <h2>Frequently Asked Questions</h2>
       
@@ -499,16 +499,11 @@
       <h3>Q: What happens after I submit a report?</h3>
       <p>Our moderation team will review your report and take appropriate action, which may include removing content, warning users, or reporting to authorities if necessary.</p>
     </div>
-
-    <!-- FAQ下部広告 -->
-    <div class="ad-container">
-      <div class="ad-wrapper">
-        <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-        <ins class="eas6a97888e17" data-zoneid="5828678"></ins> 
-        <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-      </div>
-    </div>
-  </div>
+<!-- admax -->
+<div class="admax-ads" data-admax-id="a46c3c0b2d7478ec1b01899e6f6a31d6" style="display:inline-block;width:728px;height:90px;"></div>
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "a46c3c0b2d7478ec1b01899e6f6a31d6",type: "banner"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+<!-- admax -->
 
   <!-- 最下部広告 -->
   <div class="ad-container">
