--- a/policy.html
+++ b/policy.html
@@ -233,14 +233,10 @@
   </style>
 </head>
 <body>
-  <!-- トップ広告エリア（中央配置） -->
-  <div class="ad-container">
-    <div class="ad-wrapper">
-      <script async type="application/javascript" src="https://a.pemsrv.com/ad-provider.js"></script> 
-      <ins class="eas6a97888e35" data-zoneid="5828666"></ins> 
-      <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-    </div>
-  </div>
+<!-- admax -->
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "d56a5489c91c2dc5753771bc2a516f9f",type: "action"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+<!-- admax -->
 
   <div class="container">
     <header>
@@ -294,15 +290,11 @@
         This service is provided "as-is." File Saver assumes no responsibility for any damages arising from the use of this service.
       </p>
 
-      <!-- Terms中央広告 -->
-      <div class="ad-container">
-        <div class="ad-wrapper">
-          <script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
-          <ins class="eas6a97888e2" data-zoneid="5828662"></ins> 
-          <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-        </div>
-      </div>
-    </div>
+<!-- admax -->
+<div class="admax-ads" data-admax-id="fdf17afcca824b4238dc71266929761e" style="display:inline-block;width:160px;height:600px;"></div>
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "fdf17afcca824b4238dc71266929761e",type: "banner"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+<!-- admax -->
 
     <!-- Privacy Policy -->
     <div id="privacy" class="content">
@@ -332,10 +324,10 @@
       <p>
         Report information is stored on Discord servers. Please refer to Discord's Privacy Policy for more details about data handling.
       </p>
-<script async type="application/javascript" src="https://a.magsrv.com/ad-provider.js"></script> 
- <ins class="eas6a97888e37" data-zoneid="5828702"></ins> 
- <script>(AdProvider = window.AdProvider || []).push({"serve": {}});</script>
-
+<!-- admax -->
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "d56a5489c91c2dc5753771bc2a516f9f",type: "action"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+<!-- admax -->
     <!-- Content Policy -->
     <div id="content" class="content">
       <h2>Content Policy</h2>
@@ -396,7 +388,11 @@
         <li><strong>Data protection laws</strong> - Ensuring appropriate handling of personal information</li>
         <li><strong>Consumer protection laws</strong> - Prohibiting illegal commercial practices</li>
       </ul>
-      
+      <!-- admax -->
+<div class="admax-ads" data-admax-id="fdf17afcca824b4238dc71266929761e" style="display:inline-block;width:160px;height:600px;"></div>
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "fdf17afcca824b4238dc71266929761e",type: "banner"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+<!-- admax -->
       <h3>How to Report Inappropriate Content</h3>
       <p>
         If you discover inappropriate content, please report it through the contact page.
