update contact and policy pages

--- a/index.html
+++ b/index.html
@@ -840,6 +840,10 @@
   </style>
 </head>
 <body>
+  <!-- admax -->
+<script type="text/javascript">(admaxads = window.admaxads || []).push({admax_id: "c19a17bea2c87ef60f395260e3420331",type: "action"});</script>
+<script type="text/javascript" charset="utf-8" src="https://adm.shinobi.jp/st/t.js" async></script>
+<!-- admax -->
   <!-- admax banner広告 - 中央揃え -->
   <div class="ad-container">
     <div class="ad-wrapper">
